--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,5 @@
-pip install -r requirements.txt
-streamlit run app.py
+streamlit>=1.30.0
+pandas>=2.1.0
+openpyxl>=3.1.0
+xlrd==1.2.0
+xlsxwriter>=3.1.0
